--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-
+pypdf = "^3.16"
 
 [build-system]
 requires = ["poetry-core"]
