--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,32 @@ readme = "README.md"
 python = "^3.10"
 pypdf = "^3.16"
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.1.0"
+black = "^23.11.0"
+nox = "^2023.4.22"
+mypy = "^1.7.1"
+flake8-docstrings = "^1.7.0"
+isort = "^5.12.0"
+flake8-bugbear = "^23.9.16"
+
+[tool.black]
+target-version = ["py310"]
+extend-exclude = ".venv,.mypy_cache"
+
+[tool.mypy]
+python_version = "3.10"
+warn_return_any = true
+warn_unused_configs = true
+packages = ["bills_analyzer"]
+
+[tool.isort]
+profile = "black"
+skip_gitignore = true
+include_trailing_comma = true
+#virtual_env = .venv
+color_output = true
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
