--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ flake8-docstrings = "^1.7.0"
 isort = "^5.12.0"
 flake8-bugbear = "^23.9.16"
 
+[tool.poetry.scripts]
+gas_bill_processor="utility_bills_processor.national_grid_gas:main"
+
 [tool.black]
 target-version = ["py310"]
 extend-exclude = ".venv,.mypy_cache"
