--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 pypdf = "^3.16"
+click = "^8.1.7"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
