--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 pypdf = "^3.16"
 click = "^8.1.7"
+colorlog = "^6.8.2"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
@@ -20,8 +21,7 @@ isort = "^5.12.0"
 flake8-bugbear = "^23.9.16"
 
 [tool.poetry.scripts]
-gas_bill_processor="utility_bills_processor.national_grid_gas:main"
-water_bill_processor="utility_bills_processor.water_and_sewer:main"
+process_utility_bill="utility_bills_processor.cli:cli"
 
 [tool.black]
 target-version = ["py312"]
