Add setup_repo.sh and rework tool stack
Have nox use poetry instead of the reverse, leveraging nox-poetry.

During testing, found that the unittest command didn't easily find or
load the test files. So switched to pytest, which required a test file
name change to avoid.

The setup_repo.sh script installs all the non-poetry managed tools
(including poetry), installs the poetry-managed dependencies, and
pre-installs pre-commit tools.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,5 +57,8 @@ repos:
         - pypdf==3.16
         - click==8.1.7
         - colorlog==6.8.2
-        # duplicate of pyproject.toml [tool.poetry.group.dev.dependencies]
+        # for noxfile. these should be installed with
+        # pipx install nox
+        # pipx inject nox nox-poetry
         - nox==2023.4.22
+        - nox-poetry==1.0.3
