Add version to cli
Includes adding tests to verify versions are bumped everywhere together.
The main cli function was renamed to match the final click-generated
string and the direct invocation string.

Pytest is added to the mypy additional dependency list.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ click = "^8.1.7"
 colorlog = "^6.8.2"
 
 [tool.poetry.scripts]
-process_utility_bill="utility_bills_processor.cli:cli"
+process-utility-bill="utility_bills_processor.cli:process_utility_bill"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
