--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,8 +57,8 @@ repos:
         - pypdf==3.16
         - click==8.1.7
         - colorlog==6.8.2
-        # for noxfile. these should be installed with
-        # pipx install nox
-        # pipx inject nox nox-poetry
+        # duplicate of pyproject.toml [tool.poetry.group.dev.dependencies]
+        - pytest==8.3.2
+        # for noxfile. these should be installed with ./scripts/setup_repo.sh
         - nox==2023.4.22
         - nox-poetry==1.0.3
