--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ pytest-cov = "^5.0.0"
 mypy = "^1.11.0"
 nox = "^2023.4.22"
 nox-poetry = "^1.0.3"
+flake8-bugbear = "^24.4.26"
+flake8 = "^7.1.0"
+flake8-bandit = "^4.1.1"
+flake8-docstrings = "^1.7.0"
 
 [tool.black]
 target-version = ["py312"]
